// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The course should render correctly, with 0 lessons when showLessons is falsy 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Course
    description="This course is the third of the innovation seminary"
    id={1}
    lessons={
        Array [
            Object {
              "course_id": 1,
              "course_short_name": "SEMI",
              "date": "2019-01-18",
              "description": "JMD will be talking about Agoranov for one long hour",
              "hour": "16:45",
              "lesson_number": 1,
              "location": "Agoranov",
            },
            Object {
              "course_id": 1,
              "course_short_name": "SEMI",
              "date": undefined,
              "description": "JB Bengo will be talking about very interesting things",
              "hour": "15:15",
              "lesson_number": 2,
              "location": "Telecom",
            },
            Object {
              "course_id": 1,
              "course_short_name": "SEMI",
              "date": "2019-01-18",
              "description": "JB Bengo will be talking about very interesting things",
              "hour": "15:18",
              "lesson_number": 3,
              "location": "Telecom",
            },
            Object {
              "course_id": 1,
              "course_short_name": "SEMI",
              "date": "2019-01-18",
              "description": "Version2 : JB Bengo will be talking about very interesting things",
              "hour": "15:18",
              "lesson_number": 4,
              "location": "Telecom",
            },
          ]
    }
    main_teacher="J-M. Dalle"
    short_name="SEMI"
    title="Seminaire Innovation"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": "SEMI",
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h3>
          SEMI - Seminaire Innovation
           
          <Link
                    replace={false}
                    to="/courses/1/seminaire_innovation"
          >
                     détails
          </Link>
</h3>,
        <p>
          Main Teacher : 
          J-M. Dalle
          <br />
          Description : 
          This course is the third of the innovation seminary
          <br />
</p>,
        undefined,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "SEMI - Seminaire Innovation",
            " ",
            <Link
              replace={false}
              to="/courses/1/seminaire_innovation"
>
               détails
</Link>,
          ],
        },
        "ref": null,
        "rendered": Array [
          "SEMI - Seminaire Innovation",
          " ",
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": " détails",
              "replace": false,
              "to": "/courses/1/seminaire_innovation",
            },
            "ref": null,
            "rendered": " détails",
            "type": [Function],
          },
        ],
        "type": "h3",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "Main Teacher : ",
            "J-M. Dalle",
            <br />,
            "Description : ",
            "This course is the third of the innovation seminary",
            <br />,
          ],
        },
        "ref": null,
        "rendered": Array [
          "Main Teacher : ",
          "J-M. Dalle",
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": "br",
          },
          "Description : ",
          "This course is the third of the innovation seminary",
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": "br",
          },
        ],
        "type": "p",
      },
      undefined,
    ],
    "type": "li",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": "SEMI",
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h3>
            SEMI - Seminaire Innovation
             
            <Link
                        replace={false}
                        to="/courses/1/seminaire_innovation"
            >
                         détails
            </Link>
</h3>,
          <p>
            Main Teacher : 
            J-M. Dalle
            <br />
            Description : 
            This course is the third of the innovation seminary
            <br />
</p>,
          undefined,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "SEMI - Seminaire Innovation",
              " ",
              <Link
                replace={false}
                to="/courses/1/seminaire_innovation"
>
                 détails
</Link>,
            ],
          },
          "ref": null,
          "rendered": Array [
            "SEMI - Seminaire Innovation",
            " ",
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": " détails",
                "replace": false,
                "to": "/courses/1/seminaire_innovation",
              },
              "ref": null,
              "rendered": " détails",
              "type": [Function],
            },
          ],
          "type": "h3",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Main Teacher : ",
              "J-M. Dalle",
              <br />,
              "Description : ",
              "This course is the third of the innovation seminary",
              <br />,
            ],
          },
          "ref": null,
          "rendered": Array [
            "Main Teacher : ",
            "J-M. Dalle",
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": "br",
            },
            "Description : ",
            "This course is the third of the innovation seminary",
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": "br",
            },
          ],
          "type": "p",
        },
        undefined,
      ],
      "type": "li",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`The course should render correctly, with 4 lessons when showLessons is truthy, moreover, a button should be here and create empty lesson 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Course
    description="This course is the third of the innovation seminary"
    dispatch={[Function]}
    id={1}
    lessons={
        Array [
            Object {
              "course_id": 1,
              "course_short_name": "SEMI",
              "date": "2019-01-18",
              "description": "JMD will be talking about Agoranov for one long hour",
              "hour": "16:45",
              "lesson_number": 1,
              "location": "Agoranov",
            },
            Object {
              "course_id": 1,
              "course_short_name": "SEMI",
              "date": undefined,
              "description": "JB Bengo will be talking about very interesting things",
              "hour": "15:15",
              "lesson_number": 2,
              "location": "Telecom",
            },
            Object {
              "course_id": 1,
              "course_short_name": "SEMI",
              "date": "2019-01-18",
              "description": "JB Bengo will be talking about very interesting things",
              "hour": "15:18",
              "lesson_number": 3,
              "location": "Telecom",
            },
            Object {
              "course_id": 1,
              "course_short_name": "SEMI",
              "date": "2019-01-18",
              "description": "Version2 : JB Bengo will be talking about very interesting things",
              "hour": "15:18",
              "lesson_number": 4,
              "location": "Telecom",
            },
          ]
    }
    main_teacher="J-M. Dalle"
    short_name="SEMI"
    showLessons={true}
    title="Seminaire Innovation"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": "SEMI",
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h3>
          SEMI - Seminaire Innovation
           
          <Link
                    replace={false}
                    to="/courses/1/seminaire_innovation"
          >
                     détails
          </Link>
</h3>,
        <p>
          Main Teacher : 
          J-M. Dalle
          <br />
          Description : 
          This course is the third of the innovation seminary
          <br />
</p>,
        <ul>
          <Connect(Lesson)
                    course_id={1}
                    course_short_name="SEMI"
                    date="2019-01-18"
                    description="JMD will be talking about Agoranov for one long hour"
                    editable={true}
                    hour="16:45"
                    lesson_number={1}
                    location="Agoranov"
          />
          <Connect(Lesson)
                    course_id={1}
                    course_short_name="SEMI"
                    date={undefined}
                    description="JB Bengo will be talking about very interesting things"
                    editable={true}
                    hour="15:15"
                    lesson_number={2}
                    location="Telecom"
          />
          <Connect(Lesson)
                    course_id={1}
                    course_short_name="SEMI"
                    date="2019-01-18"
                    description="JB Bengo will be talking about very interesting things"
                    editable={true}
                    hour="15:18"
                    lesson_number={3}
                    location="Telecom"
          />
          <Connect(Lesson)
                    course_id={1}
                    course_short_name="SEMI"
                    date="2019-01-18"
                    description="Version2 : JB Bengo will be talking about very interesting things"
                    editable={true}
                    hour="15:18"
                    lesson_number={4}
                    location="Telecom"
          />
          <li>
                    <button
                              className="btn btn-link"
                              onClick={[Function]}
                    >
                              Ajouter un cours
                    </button>
          </li>
</ul>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "SEMI - Seminaire Innovation",
            " ",
            <Link
              replace={false}
              to="/courses/1/seminaire_innovation"
>
               détails
</Link>,
          ],
        },
        "ref": null,
        "rendered": Array [
          "SEMI - Seminaire Innovation",
          " ",
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": " détails",
              "replace": false,
              "to": "/courses/1/seminaire_innovation",
            },
            "ref": null,
            "rendered": " détails",
            "type": [Function],
          },
        ],
        "type": "h3",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "Main Teacher : ",
            "J-M. Dalle",
            <br />,
            "Description : ",
            "This course is the third of the innovation seminary",
            <br />,
          ],
        },
        "ref": null,
        "rendered": Array [
          "Main Teacher : ",
          "J-M. Dalle",
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": "br",
          },
          "Description : ",
          "This course is the third of the innovation seminary",
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": "br",
          },
        ],
        "type": "p",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            Array [
              <Connect(Lesson)
                course_id={1}
                course_short_name="SEMI"
                date="2019-01-18"
                description="JMD will be talking about Agoranov for one long hour"
                editable={true}
                hour="16:45"
                lesson_number={1}
                location="Agoranov"
/>,
              <Connect(Lesson)
                course_id={1}
                course_short_name="SEMI"
                date={undefined}
                description="JB Bengo will be talking about very interesting things"
                editable={true}
                hour="15:15"
                lesson_number={2}
                location="Telecom"
/>,
              <Connect(Lesson)
                course_id={1}
                course_short_name="SEMI"
                date="2019-01-18"
                description="JB Bengo will be talking about very interesting things"
                editable={true}
                hour="15:18"
                lesson_number={3}
                location="Telecom"
/>,
              <Connect(Lesson)
                course_id={1}
                course_short_name="SEMI"
                date="2019-01-18"
                description="Version2 : JB Bengo will be talking about very interesting things"
                editable={true}
                hour="15:18"
                lesson_number={4}
                location="Telecom"
/>,
            ],
            <li>
              <button
                            className="btn btn-link"
                            onClick={[Function]}
              >
                            Ajouter un cours
              </button>
</li>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "1_1",
            "nodeType": "class",
            "props": Object {
              "course_id": 1,
              "course_short_name": "SEMI",
              "date": "2019-01-18",
              "description": "JMD will be talking about Agoranov for one long hour",
              "editable": true,
              "hour": "16:45",
              "lesson_number": 1,
              "location": "Agoranov",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "1_2",
            "nodeType": "class",
            "props": Object {
              "course_id": 1,
              "course_short_name": "SEMI",
              "date": undefined,
              "description": "JB Bengo will be talking about very interesting things",
              "editable": true,
              "hour": "15:15",
              "lesson_number": 2,
              "location": "Telecom",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "1_3",
            "nodeType": "class",
            "props": Object {
              "course_id": 1,
              "course_short_name": "SEMI",
              "date": "2019-01-18",
              "description": "JB Bengo will be talking about very interesting things",
              "editable": true,
              "hour": "15:18",
              "lesson_number": 3,
              "location": "Telecom",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "1_4",
            "nodeType": "class",
            "props": Object {
              "course_id": 1,
              "course_short_name": "SEMI",
              "date": "2019-01-18",
              "description": "Version2 : JB Bengo will be talking about very interesting things",
              "editable": true,
              "hour": "15:18",
              "lesson_number": 4,
              "location": "Telecom",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <button
                className="btn btn-link"
                onClick={[Function]}
>
                Ajouter un cours
</button>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Ajouter un cours",
                "className": "btn btn-link",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": "Ajouter un cours",
              "type": "button",
            },
            "type": "li",
          },
        ],
        "type": "ul",
      },
    ],
    "type": "li",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": "SEMI",
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h3>
            SEMI - Seminaire Innovation
             
            <Link
                        replace={false}
                        to="/courses/1/seminaire_innovation"
            >
                         détails
            </Link>
</h3>,
          <p>
            Main Teacher : 
            J-M. Dalle
            <br />
            Description : 
            This course is the third of the innovation seminary
            <br />
</p>,
          <ul>
            <Connect(Lesson)
                        course_id={1}
                        course_short_name="SEMI"
                        date="2019-01-18"
                        description="JMD will be talking about Agoranov for one long hour"
                        editable={true}
                        hour="16:45"
                        lesson_number={1}
                        location="Agoranov"
            />
            <Connect(Lesson)
                        course_id={1}
                        course_short_name="SEMI"
                        date={undefined}
                        description="JB Bengo will be talking about very interesting things"
                        editable={true}
                        hour="15:15"
                        lesson_number={2}
                        location="Telecom"
            />
            <Connect(Lesson)
                        course_id={1}
                        course_short_name="SEMI"
                        date="2019-01-18"
                        description="JB Bengo will be talking about very interesting things"
                        editable={true}
                        hour="15:18"
                        lesson_number={3}
                        location="Telecom"
            />
            <Connect(Lesson)
                        course_id={1}
                        course_short_name="SEMI"
                        date="2019-01-18"
                        description="Version2 : JB Bengo will be talking about very interesting things"
                        editable={true}
                        hour="15:18"
                        lesson_number={4}
                        location="Telecom"
            />
            <li>
                        <button
                                    className="btn btn-link"
                                    onClick={[Function]}
                        >
                                    Ajouter un cours
                        </button>
            </li>
</ul>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "SEMI - Seminaire Innovation",
              " ",
              <Link
                replace={false}
                to="/courses/1/seminaire_innovation"
>
                 détails
</Link>,
            ],
          },
          "ref": null,
          "rendered": Array [
            "SEMI - Seminaire Innovation",
            " ",
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": " détails",
                "replace": false,
                "to": "/courses/1/seminaire_innovation",
              },
              "ref": null,
              "rendered": " détails",
              "type": [Function],
            },
          ],
          "type": "h3",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Main Teacher : ",
              "J-M. Dalle",
              <br />,
              "Description : ",
              "This course is the third of the innovation seminary",
              <br />,
            ],
          },
          "ref": null,
          "rendered": Array [
            "Main Teacher : ",
            "J-M. Dalle",
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": "br",
            },
            "Description : ",
            "This course is the third of the innovation seminary",
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": "br",
            },
          ],
          "type": "p",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              Array [
                <Connect(Lesson)
                  course_id={1}
                  course_short_name="SEMI"
                  date="2019-01-18"
                  description="JMD will be talking about Agoranov for one long hour"
                  editable={true}
                  hour="16:45"
                  lesson_number={1}
                  location="Agoranov"
/>,
                <Connect(Lesson)
                  course_id={1}
                  course_short_name="SEMI"
                  date={undefined}
                  description="JB Bengo will be talking about very interesting things"
                  editable={true}
                  hour="15:15"
                  lesson_number={2}
                  location="Telecom"
/>,
                <Connect(Lesson)
                  course_id={1}
                  course_short_name="SEMI"
                  date="2019-01-18"
                  description="JB Bengo will be talking about very interesting things"
                  editable={true}
                  hour="15:18"
                  lesson_number={3}
                  location="Telecom"
/>,
                <Connect(Lesson)
                  course_id={1}
                  course_short_name="SEMI"
                  date="2019-01-18"
                  description="Version2 : JB Bengo will be talking about very interesting things"
                  editable={true}
                  hour="15:18"
                  lesson_number={4}
                  location="Telecom"
/>,
              ],
              <li>
                <button
                                className="btn btn-link"
                                onClick={[Function]}
                >
                                Ajouter un cours
                </button>
</li>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "1_1",
              "nodeType": "class",
              "props": Object {
                "course_id": 1,
                "course_short_name": "SEMI",
                "date": "2019-01-18",
                "description": "JMD will be talking about Agoranov for one long hour",
                "editable": true,
                "hour": "16:45",
                "lesson_number": 1,
                "location": "Agoranov",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "1_2",
              "nodeType": "class",
              "props": Object {
                "course_id": 1,
                "course_short_name": "SEMI",
                "date": undefined,
                "description": "JB Bengo will be talking about very interesting things",
                "editable": true,
                "hour": "15:15",
                "lesson_number": 2,
                "location": "Telecom",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "1_3",
              "nodeType": "class",
              "props": Object {
                "course_id": 1,
                "course_short_name": "SEMI",
                "date": "2019-01-18",
                "description": "JB Bengo will be talking about very interesting things",
                "editable": true,
                "hour": "15:18",
                "lesson_number": 3,
                "location": "Telecom",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "1_4",
              "nodeType": "class",
              "props": Object {
                "course_id": 1,
                "course_short_name": "SEMI",
                "date": "2019-01-18",
                "description": "Version2 : JB Bengo will be talking about very interesting things",
                "editable": true,
                "hour": "15:18",
                "lesson_number": 4,
                "location": "Telecom",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <button
                  className="btn btn-link"
                  onClick={[Function]}
>
                  Ajouter un cours
</button>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Ajouter un cours",
                  "className": "btn btn-link",
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": "Ajouter un cours",
                "type": "button",
              },
              "type": "li",
            },
          ],
          "type": "ul",
        },
      ],
      "type": "li",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
